<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PVD Prevención</string>
    <string name="registrar">Registrar</string>
    <string name="acceder">Acceder</string>
    <string name="contrasena">Contraseña</string>
    <string name="email">Email</string>
    <string name="opcionAMarcada">La opción A está marcada.</string>
    <string name="opcionANoMarcada">La opción A no está marcada.</string>
    <string name="opcionBMarcada">La opción B está marcada.</string>
    <string name="opcionBNoMarcada">La opción B no está marcada.</string>
    <string name="prefs_file">com.alloza.allprevention.PREFERENCE_FILE_KEY</string>
    <string name="prefs_file2">com.alloza.allprevention.PREFERENCE_FILE_KEY2</string>
    <string name="facebook_app_id">6835416223195577</string>
    <string name="fb_login_protocol_scheme">fb6835416223195577</string>
    <string name="consideracionesGenerales">La utilización del equipo es segura,
        no es una fuente de riesgo por sí mismo.</string>
    <string name="pantalla1">Los caracteres de la pantalla están bien definidos y tienen un tamaño
        suficiente.</string>
    <string name="pantalla2">El espacio entre caracteres y entre renglones es adecuado.</string>
    <string name="pantalla3">La imagen de la pantalla es estable y no se observan destellos,
        centelleos ni otras inestabilidades.</string>
    <string name="pantalla4">Se puede ajustar la luminosidad y el contraste entre los caracteres y
        el fondo de la pantalla.</string>
    <string name="pantalla5">La pantalla es orientable e inclinable.</string>
    <string name="pantalla6">No se observan reflejos ni reverberaciones molestas.</string>
    <string name="teclado1">El teclado es inclinable e independiente de la pantalla.</string>
    <string name="teclado2">Hay espacio suficiente delante del teclado para apoyar los brazos y
        las manos.</string>
    <string name="teclado3">La superficie del teclado es mate y no presenta reflejos.</string>
    <string name="teclado4">La disposición y las características de las teclas facilitan su
        utilización.</string>
    <string name="teclado5">Los símbolos de las teclas resaltan y son fácilmente legibles.</string>
    <string name="mesaOSuperficieDeTrabajo1">La superficie de la mesa es poco reflectante.</string>
    <string name="mesaOSuperficieDeTrabajo2">Las dimensiones son suficientes para colocar todos los
        elementos necesarios en el puesto de trabajo.</string>
    <string name="mesaOSuperficieDeTrabajo3">El portadocumentos es estable y regulable. </string>
    <string name="mesaOSuperficieDeTrabajo4">La ubicación del portadocumentos minimiza los
        movimientos incómodos de la cabeza y de los ojos.</string>
    <string name="mesaOSuperficieDeTrabajo5">El espacio de la superficie de trabajo es suficiente
        para permitir una posición cómoda.</string>
    <string name="asientoDeTrabajo1">El asiento es estable, proporciona libertad de movimientos y
        permite adoptar una postura cómoda.</string>
    <string name="asientoDeTrabajo2">La altura del asiento se puede regular.</string>
    <string name="asientoDeTrabajo3">El respaldo es reclinable y su altura ajustable.</string>
    <string name="asientoDeTrabajo4">Se pone un reposapiés a disposición de quien lo desee.</string>
    <string name="espacio">El puesto de trabajo tiene dimensiones y espacio suficiente para
        permitir los cambios de postura y los movimientos de trabajo.</string>
    <string name="iluminacion1">Se garantiza un nivel adecuado de iluminación y unas relaciones
        adecuadas de luminancia entre la pantalla y su entorno.</string>
    <string name="iluminacion2">Se evitan los deslumbramientos y los reflejos molestos mediante el
        acondicionamiento del puesto y la situación y las características de las fuentes de luz
        artificial.</string>
    <string name="reflejosYDeslumbramientos1">Los puestos de trabajo están instalados de manera que
        se evitan los reflejos molestos de las fuentes de luz natural y de los elementos claros del
        entorno.</string>
    <string name="reflejosYDeslumbramientos2">Las ventanas están equipadas con algún dispositivo
        adecuado y regulable que atenúa la luz natural.</string>
    <string name="ruido">El ruido producido por los equipos instalados en el puesto de trabajo no
        perturba la atención ni la palabra.</string>
    <string name="calor">El calor emitido por los equipos instalados en el puesto de trabajo
        no ocasiona molestias.</string>
    <string name="emisiones">Las radiaciones electromagnéticas que no forman parte del espectro
        visible están reducidas a niveles insignificantes.</string>
    <string name="humedad">El nivel de humedad ambiental es aceptable.</string>
    <string name="interconexionPersonaOrdenador1">El programa está adaptado a la tarea.</string>
    <string name="interconexionPersonaOrdenador2">El programa es fácil de utilizar y se adapta a
        los conocimientos y a la experiencia de los usuarios.</string>
    <string name="interconexionPersonaOrdenador3">Se informa a los trabajadores y se consulta con
        sus representantes sobre la existencia de posibles dispositivos de control.</string>
    <string name="interconexionPersonaOrdenador4">El sistema (software) proporciona indicaciones
        sobre su desarrollo.</string>
    <string name="interconexionPersonaOrdenador5">El sistema (software) muestra la información en
        un formato y a un ritmo adaptado a los trabajadores.</string>
    <string name="interconexionPersonaOrdenador6">Se aplican los principios de la ergonomía al
        tratamiento de la información.</string>
    <string name="boe">https://www.boe.es/buscar/act.php?id=BOE-A-1997-8671</string>
    <string name="guiaTecnica">https://www.insst.es/documents/94886/789467/Gu%C3%ADa+t%C3%A9cnica+para+la+evaluaci%C3%B3n+y+prevenci%C3%B3n+de+los+riesgos+relativos+a+la+utilizaci%C3%B3n+de+equipos+con+pantallas+de+visualizaci%C3%B3n.pdf</string>
    <string name="link">asasas<a href="https://www.boe.es/buscar/act.php?id=BOE-A-1997-8669">HOLA</a>asdasd</string>
    <string name="link2">Teniendo en cuenta que, en los puestos típicos de trabajo que hacen uso de equipos con pantallas de visualización, es habitual que se simultaneen tareas de lectura y de escritura, tanto en el papel como en la pantalla, el nivel de iluminación promedio deberá estar comprendido en el rango de 300 lux a 500 lux.\n\nPara más información consulte la tabla de niveles de iluminación del ANEXO IV (Iluminación de los lugares de trabajo) del <a href="https://www.boe.es/buscar/act.php?id=BOE-A-1997-8669">Real Decreto 488/1997, de 14 de abril, sobre disposiciones mínimas de seguridad y salud relativas al trabajo con equipos que incluyen pantallas de visualización.</a></string>
    <string name="checkbox1OK">No es necesario aplicar medidas preventivas.</string>
    <string name="ayuda1">Esta es la pantalla de ayuda, dónde puede encontrar información acerca de cómo navegar por las diferentes pantallas de PVD Prevención, así como aprender a desenvolverse mejor en cada una de ellas.</string>
    <string name="ayuda2">REALIZAR EVALUACIÓN</string>
    <string name="ayuda3">Una vez pulse en el botón de Realizar Evaluación, se le presenta una lista compuesta por los diferentes aspectos que se van a analizar de su puesto de trabajo con pantallas de visualización. Debe marcar con un tick, pulsando una vez en el cuadrado asociado a cada aspecto analizado (pulsar un cuadrado vacío lo marca con un tick, pulsarlo cuando tiene un tick, lo desmarca) cuando su puesto de trabajo cumpla el aspecto que se está analizando.\n\nEl objetivo de PVD Prevención es proporcionarle una serie de medidas preventivas a su puesto de trabajo, por lo que si marca un aspecto con un tick, la aplicación asumirá que la cumple y no le recomendará aplicar ninguna medida. Dicho esto, si encuentra un aspecto que no aplique a su puesto de trabajo, márquelo con un tick para obviarlo o déjelo sin marcar en caso de que desee conocer una posible medida de prevención por si en algún momento llegase a aplicarse dicho aspecto en su puesto de trabajo. Una vez haya terminado de completar la lista, pulse en el botón de Resultados.</string>
    <string name="ayuda4">En la pantalla Resultados se le presentan los resultados obtenidos de la lista que acaba de completar, en la que para cada aspecto analizado que no ha marcado con un tick (es decir, que no cumple su puesto de trabajo) se le ofrece una medida preventiva que puede aplicar a su puesto de trabajo para corregirlo. Aquellos aspectos marcados con un tick (los que cumple su puesto de trabajo) le recuerdan que no es necesario aplicarles medidas preventivas.</string>
    <string name="ayuda5">Es posible que realice una evaluación y simplemente quiera conocer las medidas preventivas que podría aplicar en su puesto de trabajo, pero PVD Prevención le ofrece la posibilidad de guardar la evaluación realizada. Para ello, simplemente introduzca un nombre para su evaluación (ejemplo: Evaluación de mi puesto de trabajo) y pulse en el botón Guardar evaluación. De esta forma, su evaluación queda guardada en PVD Prevención. Para visualizarla, acceda a Mis Evaluaciones.</string>
    <string name="ayuda6">Resultados</string>
    <string name="ayuda7">Guardar evaluación</string>
    <string name="ayuda8">MIS EVALUACIONES</string>
    <string name="ayuda9">Una vez pulse en el botón de Mis Evaluaciones, se le presenta una lista compuesta por toda las evaluaciones que ha guardado en PVD Prevención. Cada evaluación dispone de tres botones:\n\n- Pulse el botón con el nombre de la evaluación para acceder a los resultados de la misma.\n\n- Pulse el botón de la papelera para borrar dicha evaluación de PVD Prevención.\n\n- Pulse el botón de la flecha hacia abajo para descargar dicha evaluación en su dispositivo Android en formato PDF. Podrá encontrar el archivo en la carpeta Descargas de su dipositivo.</string>
    <string name="ayuda10">PREGUNTAS FRECUENTES (FAQ)</string>
    <string name="ayuda11">Una vez pulse en el botón de Preguntas Frecuentes (FAQ), se le presenta una serie de aspectos (compuestos por una pregunta y una respuesta) de interés relacionados con el ámbito de las pantallas de visualización y sus posibles medidas preventivas en los que no se incide en las evaluaciones de PVD Prevención. Es por eso que se les dedica un espacio en esta pantalla, para informar a aquellos usuarios que puedan estar interesados en la prevención. </string>
    <string name="ayuda14"><b>IMPORTANTE:</b> La primera vez que acceda a Mis Evaluaciones, saldrá de PVD Prevención a una pantalla de Acceso a todos los archivos, en la que se le muestra una lista de aplicaciones de su dipositivo. En caso de que desee utilizar la opción de descargar las evaluaciones realizadas en formato PDF, busque PVD Prevención en la lista y púlsela. A continuación, active el botón de Acceso a todos los archivos y vuelva a la aplicación.</string>
    <string name="ayuda15">PVD Prevención no accederá a los archivos de su dispositivo sin notificárselo, pero es necesario darle los permisos de almacenamiento para que pueda acceder a la carpeta Descargas, dónde depositará sus evaluaciones en formato PDF. Si no desea utilizar la opcion de descarga de PVD Prevención, no es necesario que le de permisos de ningún tipo, aunque la propia aplicación los solicitará cuando intente acceder a sus evaluaciones y lo llevará a la pantalla de Acceso a todos los archivos. Simplemente pulse el botón de su dispositivo para volver hacia atrás (de vuelta a la aplicación) y podrá seguir visualizando sus evaluaciones.</string>
</resources>