<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".HelpActivity">

        <LinearLayout
            android:id="@+id/helpLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/helpText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda1"
                android:gravity=""
                android:textColor="@color/negro"
                android:textSize="17sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/helpText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda2"
                android:gravity=""
                android:textStyle="bold"
                android:textColor="@color/negro"
                android:textSize="17sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/helpText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda3"
                android:gravity=""
                android:textColor="@color/negro"
                android:textSize="17sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/helpText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda6"
                android:gravity=""
                android:textStyle="bold"
                android:textColor="@color/negro"
                android:textSize="17sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/helpText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda4"
                android:gravity=""
                android:textColor="@color/negro"
                android:textSize="17sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/helpText7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda7"
                android:textStyle="bold"
                android:gravity=""
                android:textColor="@color/negro"
                android:textSize="17sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/helpText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda5"
                android:gravity=""
                android:textColor="@color/negro"
                android:textSize="17sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/helpText8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda8"
                android:gravity=""
                android:textStyle="bold"
                android:textColor="@color/negro"
                android:textSize="17sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/helpText9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda9"
                android:gravity=""
                android:textColor="@color/negro"
                android:textSize="17sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/negro"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/negro"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/helpText14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda14"
                android:gravity=""
                android:textColor="@color/negro"
                android:textSize="17sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/helpText15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda15"
                android:gravity=""
                android:textColor="@color/negro"
                android:textSize="17sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/negro"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/negro"/>

            <Space
                android:layout_width="1dp"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/helpText10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda10"
                android:gravity=""
                android:textStyle="bold"
                android:textColor="@color/negro"
                android:textSize="17sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/helpText11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ayuda11"
                android:gravity=""
                android:textColor="@color/negro"
                android:textSize="17sp" />

            <Space
                android:layout_width="1dp"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/acento"
                android:text="Volver al menú principal"
                android:textColor="@color/white"
                tools:ignore="HardcodedText" />

            <Space
                android:layout_width="1dp"
                android:layout_height="30dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>